Adding Identity/Pagination for the browseBooks

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookRentalContext": "Server=(localdb)\\mssqllocaldb;Database=BookRentalContext-53cbd0a2-8a4a-4300-bb58-d3d247041839;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BookRentalContext": "Server=(localdb)\\mssqllocaldb;Database=BookRentalContext-53cbd0a2-8a4a-4300-bb58-d3d247041839;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationIdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationIdentityDbContext-53cbd0a2-8a4a-4300-bb58-d3d247041839;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
